<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCity"
        android:textColor="#fff"
        android:layout_margin="15dp"
        android:text="@string/dhaka_bd"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ivThumbnailIcon"
        android:layout_below="@id/tvCity"
        android:layout_margin="15dp"
        android:background="#fff"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/tvTemp"
        android:text="@string/_30_deg_c"
        android:textColor="#fff"
        android:layout_below="@id/tvCity"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="42sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvWind"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/wind"
        android:layout_below="@id/ivThumbnailIcon"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCloud"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/cloud"
        android:layout_below="@id/tvWind"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPressure"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/pressure"
        android:layout_below="@id/tvCloud"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvHumidity"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/humidity"
        android:layout_below="@id/tvPressure"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSunRise"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/sun_rise"
        android:layout_below="@id/tvHumidity"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSunSet"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/sun_set"
        android:layout_below="@id/tvSunRise"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvLastUpdated"
        android:textColor="#fff"
        android:textSize="22sp"
        android:text="@string/last_updated"
        android:layout_below="@id/tvSunSet"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>